Perhaps this will fix it on mobile (?)

--- a/static/style.css
+++ b/static/style.css
@@ -1,7 +1,6 @@
 body {
     min-height: 90vh;
-    margin-top: 5vh;
-    margin-bottom: auto;
+    margin-top: 2.5vh;
     margin-left: 20vw;
     margin-right: 20vw;
     color: rgb(11, 34, 84);
@@ -31,7 +30,7 @@ header {
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
     width: 55vw;
-    min-height: 20vh;
+    min-height: 10vh;
 
     display: flex;
     align-items: center;
@@ -48,10 +47,39 @@ nav {
     max-height: 45px;
 }
 
-@media screen and (max-width: 1300px) {
+@media screen and (max-device-width: 700px) {
     body {
-        margin-top: 5vh;
-        margin-bottom: 5vh;
+        margin-left: 5vw;
+        margin-right: 5vw;
+    }
+
+    main {
+        width: auto;
+    }
+
+    header {
+        width: auto;
+    }
+
+    h1 {
+        font-size: 3rem;
+    }
+
+    h2 {
+        font-size: 2rem;
+    }
+
+    h3 {
+        font-size: 1.5rem;
+    }
+
+    p {
+        font-size: 1.2rem;
+    }
+}
+
+@media screen and (max-width: 1300px) and (min-device-width: 700px) {
+    body {
         margin-left: 5vw;
         margin-right: 5vw;
     }
@@ -65,7 +93,24 @@ nav {
     }
 }
 
-@media screen and (max-width: 900px) {
+@media screen and (max-width: 900px) and (min-device-width: 700px) {
+    header {
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    nav {
+        justify-content: flex-start;
+        align-self: center;
+        width: 85vw;
+    }
+
+    header h1 {
+        width: 85vw;
+    }
+}
+
+@media screen and (max-device-width: 700px) {
     header {
         flex-direction: column;
         justify-content: center;
@@ -118,6 +163,22 @@ textarea {
     font-family: monospace;
 }
 
+@media screen and (max-device-width: 700px) {
+    input[type="submit"],
+    nav a {
+        font-size: 1.3rem;
+    }
+
+    label {
+        font-size: 1.2rem;
+    }
+
+    input[type="text"],
+    textarea {
+        font-size: 1.3rem;
+    }
+}
+
 section {
     width: auto;
     overflow: auto;
@@ -140,9 +201,7 @@ section ul li a {
     flex-direction: column;
     text-decoration: none;
 
-    max-width: 25.75vw;
-    min-height: 25vh;
-    background-color: rgb(230, 238, 255);
+    background-color: rgb(255, 255, 255);
     color: rgb(28, 35, 37);
     font-weight: normal;
     border: rgb(102, 150, 255) solid 2px;
@@ -153,7 +212,7 @@ section ul li a {
 }
 
 section ul li a:hover {
-    background-color: rgb(255, 255, 255);
+    background-color: rgb(230, 238, 255);
     color: rgb(26, 31, 44);
     border: rgb(77, 133, 255) solid 2px;
     text-decoration: none;
@@ -182,23 +241,25 @@ section ul li a h3 {
     margin-bottom: 0;
 }
 
-@media screen and (max-width: 900px) {
+@media screen and (max-width: 900px) and (min-device-width: 700px) {
     section ul {
         grid-template-columns: 1fr 1fr;
     }
+}
 
-    section ul li a {
-        max-width: 45vw;
+@media screen and (max-width: 700px) and (min-device-width: 700px) {
+    section ul {
+        grid-template-columns: 1fr;
     }
 }
 
-@media screen and (max-width: 700px) {
+@media screen and (max-device-width: 700px) {
     section ul {
         grid-template-columns: 1fr;
     }
 
     section ul li a {
-        max-width: 90vw;
+        background-color: rgb(230, 238, 255);
     }
 }
 
